clusters/my-cluster/GitOps/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: gitops
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: adnaneelbouhali/aseds-exam-part2:backend-imagev2
          ports:
            - containerPort: 8000
              name: nodejs-port
          livenessProbe:
            httpGet:
              path: /livez
              port: nodejs-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
            failureThreshold: 1
            periodSeconds: 10       
          readinessProbe:
            httpGet:
              path: /readyz
              port: nodejs-port
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:    
              path: /startz
              port: nodejs-port
            failureThreshold: 30
            periodSeconds: 10
  selector:
    matchLabels:
      app: backend
