clusters/my-cluster/GitOps/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: gitops
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: backend
  type: NodePort
