clusters/my-cluster/GitOps/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: gitops
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongodb
  clusterIP: None
