clusters/my-cluster/GitOps/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: gitops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:   
    - host: aseds-exam.com   
      http:   
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
